spring-boot-grpc/templates/deployment-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-example-client
  namespace: spring-boot-grpc
  labels:
    app: spring-boot-grpc
    type: grpc-example-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-grpc
  template:
    metadata:
      labels:
        app: spring-boot-grpc
        type: grpc-example-client
    spec:
      containers:
        - name: grpc-example-client
          image: localhost:5000/grpc-client
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
