spring-boot-grpc/templates/service-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-example-client
  namespace: spring-boot-grpc
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
  selector:
    app: spring-boot-grpc
    type: grpc-example-client
