spring-boot-grpc/templates/service-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-example-server
  namespace: spring-boot-grpc
spec:
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: grpc
  selector:
    app: spring-boot-grpc
    type: grpc-example-server
