spring-boot-grpc/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-example-ingress
  namespace: spring-boot-grpc
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: grpc-example-client
                port:
                  name: http
